--- a/BookShopTutorial/App.xaml
+++ b/BookShopTutorial/App.xaml
@@ -1,9 +1,12 @@
 ﻿<Application x:Class="BookShopTutorial.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:vm ="clr-namespace:BookShopTutorial.ViewModels"                
              xmlns:local="clr-namespace:BookShopTutorial"
-             StartupUri="MainWindow.xaml">
+             StartupUri="View\MyWindows\MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <vm:ViewModelLocator x:Key="Locator"/> 
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
